fix: make job select readable when content is behind it
Fixes #14

--- a/src/app/modules/user/components/user-overlay/user-overlay.component.scss
+++ b/src/app/modules/user/components/user-overlay/user-overlay.component.scss
@@ -1,3 +1,5 @@
+@import "mixins";
+
 :host {
   position: absolute;
   top: 0;
@@ -8,6 +10,7 @@
   align-items: center;
   justify-content: center;
   background: rgba(255, 255, 255, 0.5);
+  @include blur-background(.5);
 }
 
 .rh-user-overlay {
